--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   padding: 0;
   margin: 0;
-  background-color: #ddd;
+  background-color: #fff;
 }
 
 a {
